# titanic_kaggle

./: README.md  pyproject.toml
Titanic_Kaggle/: model.ipynb  random_forest_optimized.joblib
Titanic_Kaggle/data/: submission.csv
src/titanic_kaggle/: __init__.py
