[project]
name = "titanic_kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul", email = "paul.lachaise19@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "pandas>=2.2.3",
    "pyside6>=6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
